--- a/projects-review/playbook.yml
+++ b/projects-review/playbook.yml
@@ -6,6 +6,10 @@
     - serverd.lab.example.com
 
   tasks:
+    - name: Ver los facts
+      debug:
+        var: ansible_facts
+
     - name: Install apache
       yum:
         name: apache2
